# mercury

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  bitwise.cpp  bitwise.hpp  cpu.cpp  cpu.hpp  decoder.cpp  decoder.hpp  enum_indexed_array.cpp  enum_indexed_array.hpp  enum_tools.cpp  enum_tools.hpp  instruction_formats.cpp  instruction_formats.hpp  main.cpp  sized_literals.cpp  sized_literals.hpp
